--- a/01_document/bibliografia.bib
+++ b/01_document/bibliografia.bib
@@ -86,7 +86,14 @@
   year            = {1951}
 }
 
-@
+@article{calle:oller,
+	author	= {Gomez, Guadalupe and Calle, Luz and Oller, Ramon},
+	title	= {Interval censoring: model characterizations for the validity of the simplified likelihood},
+	journal	= {Canadian Journal of Statistics},
+	volume	= {32},
+	number	= {3},
+	year	= {2004}
+}
 
 @book{casella:berg,
   author         = {Casella, George and Berger, Roger L.},
@@ -95,3 +102,10 @@
   publisher      = {Wadsworth},
   year           = {2002}
 }
+
+@article{inei:ensusalud,
+  author          = {INEI},
+  title           = {Encuesta Nacional de Satisfaccion de Usuarios del Aseguramiento Universal en Salud},
+  year            = {2015}
+}
+
