--- a/01_document/01_introduccion/cap-introduccion.tex
+++ b/01_document/01_introduccion/cap-introduccion.tex
@@ -23,7 +23,7 @@ El objetivo de la tesis consiste en proponer un modelo de regresión cuantílica a
 
 En el capítulo 2, se presenta una estructura de la distribución Weibull, apropiada para los datos con censura intervalar. Por ello, se realiza una parametrización alternativa y se estudia los 
 
-En el capítulo 3, se propone el modelo de regresión con datos censurados intervalarmente.
+En el capítulo 3, se propone el modelo de regresión con datos censurados intervalarmente. Asimismo, se efectúa un estudio de simulación para evaluar si el modelo captura apropiadamente los parámetros poblacionales.
 
 En el capítulo 4, se presenta la aplicación del modelo propuesto para determinar si existe diferencia entre los sueldos de enfermeras y enfermeros a lo largo de todos los cuantiles. Ello se realiza mediante inferencia clásica.
 
