--- a/01_document/bibliografia.bib
+++ b/01_document/bibliografia.bib
@@ -109,3 +109,11 @@
   year            = {2015}
 }
 
+@article{salyrosas:bayes,
+ author		  = {Sal y Rosas, Victor and Moscoso-Porras, Miguel and Ormeno, Ruben and Artica, Fernando and Miranda, Jaime and Bayes, Cristian},
+ title		  = {Gender income gap among physician and nurses in Peru: a nationwide assessment},
+ journal	  = {The Lancet},
+ volume		  = {7},
+ number  	  = {4},
+ year		  = {2019}
+}
